--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ evtx = "0.8.0"
 chrono = "0.4.23"
 quick-xml = { version = "0.20", features = ["serialize"] }
 serde = { version = "1.0", features = [ "derive" ] }
-polars = { version = "0.26.1", features = ["lazy"] }
+serde_json = "1.0"
+polars = { version = "0.26.1", features = ["lazy", "serde"] }
 walkdir = "2.3.2"
 neo4rs = "0.6.0"
 futures = "0.3.28"
@@ -23,3 +24,4 @@ tokio = "1.28.0"
 rpassword = "7.2.0"
 csv = "1.2.1"
 indicatif = "0.17.3"
+zip = "0.6"
