--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,13 @@ polars = { version = "0.26.1", features = ["lazy", "serde"] }
 walkdir = "2.3.2"
 neo4rs = "0.6.0"
 futures = "0.3.28"
-tokio = "1.28.0"
+tokio = { version = "1.28", features = ["macros"] }
 rpassword = "7.2.0"
 csv = "1.2.1"
 indicatif = "0.17.3"
 zip = "0.6"
+reqwest = { version = "0.11", features = ["json", "gzip"] }
+flate2 = "1.0"
+once_cell = "1"
+regex = "1"
+
